Pad resulting ROM file to the next MB boundary